# canivete

./: .gitignore  README.md  audit-bundle.txt  patch.diff  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: canivete-bot-meta-harness.md
src/canivete/: __init__.py  __main__.py  cli.py  cron.py  jules.py  miniapp.py  profile.py  tg.py  ui.py
src/canivete/bot/: callback.py  cli.py  commands.py  config.py  daemon.py  daemon.py.bak  daemon.py.orig  fatal.py  media.py  render.py
src/canivete/bot/backends/: __init__.py  base.py  claude_code.py  cline.py  cursor.py  gemini_cli.py  jules.py  kilo.py  opencode.py
tests/: test_smoke.py
tests/features/: bot.feature  bot_integration.feature  buttons.feature  commands.feature  cron.feature  jules.feature  miniapp.feature  overview.feature  profile.feature  tg.feature
tests/step_defs/: conftest.py  test_bot.py  test_bot_integration.py  test_buttons.py  test_commands.py  test_cron.py  test_jules.py  test_miniapp.py  test_overview.py  test_profile.py  test_tg.py
