[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canivete"
version = "0.1.0"
description = "Swiss-army CLI for AI agents on Telegram."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Franklin Baldo", email = "franklinbaldo@gmail.com" }]
keywords = ["cli", "telegram", "ai", "agents", "swiss-army"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-bdd>=7",
    "ruff>=0.6",
    "httpx>=0.27",
    "respx>=0.22",
]
bot = [
    "jinja2>=3.1",
    "telegramify-markdown>=0.5",
    "pydantic-settings>=2.0",
    "uuid-utils>=0.10",
]

[project.urls]
Homepage = "https://github.com/franklinbaldo/canivete"
Issues   = "https://github.com/franklinbaldo/canivete/issues"

[project.scripts]
canivete = "canivete.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

# ── ruff ─────────────────────────────────────────────────────────────
# Single source of truth for both formatter and linter. We enable the
# whole rule namespace with `ALL`, then opt out of:
#   1. rules that conflict with `ruff format` (per Astral docs);
#   2. broad rule families that are too opinionated for a small CLI;
#   3. specific rules that fight idiomatic Typer code.

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # ─── conflicts with `ruff format` (per docs) ─────────────────────
    "COM812", "COM819",
    "D206", "D300",
    "E111", "E114", "E117",
    "ISC001", "ISC002",
    "Q000", "Q001", "Q002", "Q003",
    "W191",
    "E501",          # line length: formatter handles

    # ─── Typer / Rich idioms we depend on ────────────────────────────
    "B008",          # function calls in arg defaults — Typer pattern
    "FBT001", "FBT002", "FBT003",  # boolean positional/default — Typer flags
    "ARG001",        # unused fn arg — Typer callback uses by side-effect
    "RSE102",        # raise Exit() — explicit > implicit, Typer idiom
    "TC003",         # TYPE_CHECKING split — overengineering for our size
    "PTH119",        # os.path.basename — keeping urllib-style symmetry
    "PTH123",        # builtin open — fine inline
    "PT004", "PT005",    # pytest fixture names — BDD has its own conventions

    # ─── too opinionated for a small CLI like this ───────────────────
    "D",             # whole pydocstyle namespace
    "ANN",           # exhaustive type annotations
    "FIX", "TD",     # banner format for TODO/FIXME
    "ERA",           # commented-out code (false positives)
    "EM",            # exception message format (low value)
    "TRY003",        # raise long message
    "RUF012",        # mutable class attrs (we use as data)
    "PLR2004",       # magic numbers in tests/CLI defaults
    "PLR0913",       # too many arguments — Typer commands need them
    "S101",          # assert in tests
    "S603", "S607",  # subprocess calls in tests
    "INP001",        # implicit namespace package — tests/ is fine
    "S310",          # urlopen scheme audit — URLs are HTTPS literals
    "S311",          # random.choice for tip is cosmetic, not crypto
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PT004", "PT005",       # pytest fixture naming (BDD has its own)
    "T201",                 # print in tests
    "PLR2004",              # magic values in assertions
    "SLF001",               # private member access — tests legitimately do this
    "F841",                 # unused locals (BDD step return values)
    "S105",                 # hardcoded fake credentials in tests
    "PLC0415",              # local imports in step defs (per-fixture isolation)
    "E402",                 # module-level import not at top (BDD layout)
]
"src/canivete/bot/**" = [
    # Daemon-style code: subprocess management, async event loops, broad
    # exception handling at the orchestration layer is intentional. The
    # specific event handlers that catch and swallow are top-level
    # supervisors — failures there must not propagate up and kill the
    # daemon.
    "BLE001",               # blind exception — daemon supervisors catch all
    "S110",                 # try/except/pass — same supervisor reason
    "SIM105",               # contextlib.suppress vs try/except/pass — equivalent here
    "C901", "PLR0911", "PLR0912",  # complexity in event _stream / render dispatcher
    "ARG002",               # unused method args — Backend protocol uniformity
    "RUF006",               # asyncio.create_task without saved ref — fire-and-forget supervisor
    "PERF401",              # list comprehension over .extend — readability wins
    "PLC0415",              # local imports — break circular deps in command handlers
    "B904",                 # raise X — wrapping context not always added in adapter layer
]

# ── pytest ───────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
bdd_features_base_dir = "tests/features"
markers = [
    "integration: integration tests",
]
